# latticefold-keccak

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  deny.toml  docs-header.html  rust-toolchain
.github/workflows/: ci.yml  typos.toml
ajtai_commit/: Cargo.toml
ajtai_commit/src/: lib.rs  main.rs
ccs/: Cargo.toml
ccs/src/: error.rs  lib.rs  r1cs.rs  utils.rs
check_sum/: Cargo.toml
check_sum/src/: ip.rs  lib.rs  poly_utils.rs  prover.rs  sum_check_transcript.rs  transcript.rs  utils.rs  verifier.rs
check_sum/src/transcript/: mod.rs  poseidon.rs
cyclotomic-rings/: Cargo.toml
cyclotomic-rings/src/: challenge_set.rs  lib.rs  rings.rs  rot_sum.rs  rotation.rs
cyclotomic-rings/src/challenge_set/: error.rs
cyclotomic-rings/src/rings/: babybear.rs  dilithium.rs  frog.rs  goldilocks.rs  mod.rs  pbb.rs  pgold.rs  pm31.rs  poseidon.rs  pstark.rs  stark.rs
cyclotomic-rings/src/rings/poseidon/: babybear.rs  frog.rs  goldilocks.rs  stark.rs
cyclotomic_field/: Cargo.toml
cyclotomic_field/src/: lib.rs
cyclotomic_field/src/cyclotomic_prime/: mod.rs  sparse.rs
fields/: Cargo.toml
fields/src/: lib.rs
fields/src/fields/: mersenne31.rs  mod.rs
latticefold/: Cargo.toml  build.rs
latticefold-keccak/: Cargo.toml
latticefold-keccak/examples/: keccak.rs  sha3.rs  shake128.rs  shake256.rs
latticefold-keccak/src/: circuit.rs  constants.rs  util.rs
latticefold/benches/: README.md  ajtai.rs  config.toml  decomposition.rs  e2e.rs  env.rs  folding.rs  linearization.rs  macros.rs  utils.rs
latticefold/examples/: README.md  babybear.rs  frog.rs  goldilocks.rs  starkprime.rs
latticefold/src/: arith.rs  commitment.rs  decomposition_parameters.rs  lib.rs  nifs.rs  parameters.rs  transcript.rs  utils.rs
latticefold/src/arith/: ccs.rs  error.rs  r1cs.rs  utils.rs
latticefold/src/commitment/: commitment_scheme.rs  homomorphic_commitment.rs  operations.rs
latticefold/src/nifs/: decomposition.rs  error.rs  folding.rs  linearization.rs  mle_helpers.rs  tests.rs
latticefold/src/nifs/decomposition/: structs.rs  tests.rs  utils.rs
latticefold/src/nifs/decomposition/tests/: mod.rs
latticefold/src/nifs/folding/: structs.rs  utils.rs
latticefold/src/nifs/folding/tests/: mod.rs
latticefold/src/nifs/linearization/: structs.rs  tests.rs  utils.rs
latticefold/src/nifs/linearization/tests/: mod.rs
latticefold/src/transcript/: poseidon.rs
latticefold/src/utils/: mle.rs  mle_helpers.rs  security_check.rs  sumcheck.rs  uv_polynomial.rs
latticefold/src/utils/sumcheck/: prover.rs  univ_poly.rs  utils.rs  verifier.rs  virtual_polynomial.rs
notebooks/: bounds.sage
src/: lib.rs
src/utils/: mod.rs
