[workspace] 
members = [ "latticefold", "cyclotomic-rings"]
resolver = "2"

[workspace.dependencies]
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
    "sponge",
] }
ark-ff = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-std = { version = "0.4.0", default-features = false }
lattirust-linear-algebra = { git = "ssh://git@github.com/NethermindEth/lattirust.git", branch = "main", default-features = false }
lattirust-poly = { git = "ssh://git@github.com/NethermindEth/lattirust.git", branch = "main", default-features = false }
lattirust-ring = { git = "ssh://git@github.com/NethermindEth/lattirust.git", branch = "main", default-features = false }
thiserror = { version = "1.0.63", default-features = false }

[workspace.metadata.docs.rs]
# To build locally, use 
# RUSTDOCFLAGS="--html-in-header docs-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = [ "--html-in-header", "docs-header.html" ]