[workspace] 
members = [ "latticefold", "cyclotomic-rings" ]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
    "sponge",
] }
ark-ff = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-std = { version = "0.4.0", default-features = false }
stark-rings = { git = "ssh://git@github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
stark-rings-linalg = { git = "ssh://git@github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
stark-rings-poly = { git = "ssh://git@github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
num-bigint = { version = "0.4.5", default-features = false }
rand = { version = "0.8.5", default-features = false }
thiserror = { version = "2.0.3", default-features = false }
cyclotomic-rings = { path = "cyclotomic-rings", default-features = false }
[workspace.metadata.docs.rs]
# To build locally, use 
# RUSTDOCFLAGS="--html-in-header docs-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = [ "--html-in-header", "docs-header.html" ]
