[package]
name = "cyclotomic-rings"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-std = { workspace = true } 
ark-crypto-primitives = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
lattirust-linear-algebra = { workspace = true }
lattirust-poly = { workspace = true }
lattirust-ring = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["std"]
std = []
