[package]
name = "latticefold-keccak"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
latticefold = { path =  "../latticefold", package = "latticefold" }
arkworks-keccak = { path =  "../../arkworks-keccak"}
cyclotomic-rings = { path = "../cyclotomic-rings", default-features = false }
stark-rings = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
stark-rings-linalg = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
ark-r1cs-std = "0.4"
ark-std = "0.4"
ark-bls12-381 = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4.0"
num-bigint.workspace = true
ark-ff.workspace = true